# xygrid

./: .gitignore  Cargo.toml
src/: editor.rs  lib.rs  main.rs  xy_input.rs
ui/: hello.slint
