[package]
name = "xygrid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap-sys = "0.3.0"
nih_plug = { path = "ext/nih-plug", features = ["assert_process_allocs", "standalone"] }
nih_plug_iced = { path = "ext/nih-plug/nih_plug_iced" }
atomic_float = "0.1.0"
baseview = { git = "https://github.com/RustAudio/baseview.git" }
iced = "0.9.0"

[lib]
crate-type = ["cdylib", "lib"]
